--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,19 @@
 "name": "Codespace for Skills!",
   // Use the base codespace image
 "image": "mcr.microsoft.com/vscode/devcontainers/universal:latest",
-  "remoteUser": "codespace",
-  "overrideCommand": false
+"remoteUser": "codespace",
+"overrideCommand": false,
+// Add the IDs of extensions you want installed when the container is created.
+  "customisations": {
+        "vscode": {
+                  "extensions": [
+                                "GitHub.copilot"
+                  ]
+        },
+        "codespaces": {
+                  "openFiles": [
+                                "codespace.md"
+                  ]
+        }
+  }
 }
